Improved layout of website and added footer along with audio

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Modern+Antiqua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>...</title>
+    <title>Crypt Game</title>
     <script id="gamescript"></script>
 </head>
 
@@ -15,10 +15,12 @@
     </audio>
     <audio id="deatheffect" src="audio/Dart.mp3"></audio>
     <audio id="stareffect" src="audio/Scary-Titus_Calen-1449371204.mp3"></audio>
-    <div id="blood_rain" style="text-align: center;">     
-            <span style="font-size: 100px; "><i id="play_game" class="fa fa-play" onclick="StartUp()"></i></span>
+    <div id="blood_rain" style="text-align: center;">
+        <span style="font-size: 100px; "><i id="play_game" class="fa fa-play" onclick="StartUp()"></i></span>
+         <footer>
+        <p id="footertext" class="bottom" style="font-size: 20px;">Designed by Gabriel&copy;</p>
+    </footer>
     </div>
-
 
 </body>
 
@@ -37,7 +39,5 @@
             src = "javascript/jsgame2.js"
     }
     document.getElementById("gamescript").src = src;
-
-</script>
-
-</html>
+    //document.getElementById("gamescript").src = "javascript/jsgame.js";
+</script></html>
