--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Entrance</title>
+    <title>The Crypt</title>
 </head>
 
 <body>
@@ -24,21 +24,18 @@
     <section id="sect">
         <div class="container">
             <p id="one"> Do you find yourself to be <strong><span style="color: #ffff">blessed?</span></strong></p>
-              <p id="two"> Or do you find yourself to be <strong><span style="color: red">cursed?</span></strong></p>
-            <p id="three"><strong>Regardless of your answer...</strong> To come here is to step into the unknown. To be taken somewhere... <strong>Unique.</strong> </p>
-            <p id="four">Welcome to a new world. An adventure. A to-<strong>die for</strong>-experience.</p>
+              <p id="two"> Or do you find yourself to be <strong><span style="color: lightcoral">cursed?</span></strong></p>
+            <p id="three"><strong>Regardless of your answer...</strong> To come here is to step into the unknown. To be taken somewhere... <span style="color:  lightcoral"><strong>Unique.</strong></span> </p>
+            <p id="four">Welcome to a new world. An adventure. A to-<strong><span style="color: lightcoral">die for</span></strong>-experience.</p>
             <p id="five">Welcome to...</p>          
-            <p id="seven"><strong>Wake the left eye to <span style="color: #ffff">ascend</span>, or wake the right eye to <span style="color:  darkred">descend</span> .</strong></p>
+            <p id="seven"><strong>Wake the left eye to <span style="color: #ffff">ascend to the Library</span>, or <span style="color:  lightcoral">wake the right eye to descend to the Game</span> .</strong></p>
            <!-- <p style="font-size: 15px; display: inline-block; " class="fade">IF YOU DARE...</p> -->    
                 <div  class="eye">
-                 <img style="margin: 10px; float: left" id="eyechange2" src="images/closed_eye_for_crypt.png" alt="Closed Eye Game" onclick="eye2()">        
-            </div>
-            <div class="eye" >   
-                <img style="margin: 10px; float: right" id="eyechange" src="images/closed_eye_for_crypt.png" alt="Closed Eye Library" onclick="eye()">    
-            </div>
-        
-          
+                <img style="cursor: pointer;"  id="eyechange2" src="images/closed_eye_for_crypt.png" alt="Closed Eye Game" onclick="eye2()"> 
+                <img style="cursor: pointer;"  id="eyechange" src="images/closed_eye_for_crypt.png" alt="Closed Eye Library" onclick="eye()">                         
+            </div>                        
         </div>
-    </section>s
-    <script src="javascript/eye.js"></script>
-</body></html>
+    </section>  
+</body>
+<script src="javascript/eye.js"></script>
+</html>
